swipable tiles on mobile phones, fix topic page layout

--- a/src/pages/newHome/view/tiles/index.scss
+++ b/src/pages/newHome/view/tiles/index.scss
@@ -43,6 +43,9 @@
 
 .tiles-btn {
   @include btnSmallRound(true);
+  @media (max-width: $phoneBreakpoint) {
+    display: none;
+  }
 }
 
 .tiles-btn-right {
